<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_translate"
            android:icon="@drawable/ic_action_translate"
            android:title="@string/translate" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_action_star"
            android:title="@string/choice" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_action_settings"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/choiceLang">
        <menu>

            <item
                android:id="@+id/nav_start_quickT"
                android:titleCondensed="hello"
                android:orderInCategory="300"
                android:alphabeticShortcut="sdsad"
                android:title="@string/quickt"/>
        </menu>
    </item>



</menu>
