<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.devilsoftware.transfelingo.SettingsActivity"
    tools:showIn="@layout/app_bar_settings">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textSize="18sp"
                android:text="@string/langVoice"
                android:layout_weight="2"/>
            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/voiceLng"
                android:entries="@array/voiceLang"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp" />

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quicktt"
                android:id="@+id/quick"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quickdesc"/>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_text"
                android:id="@+id/swipeInput"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
